# ncmapk

./: .gitignore  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/qwq/ncmmp3/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  ncmcrypt.cpp  tag_writer.cpp  tag_writer.h
app/src/main/cpp/include/: ncmcrypt.h
app/src/main/cpp/taglib/taglib/: CMakeLists.txt
app/src/main/java/com/ncm/converter/: FileListDialogFragment.kt  MainActivity.kt  NcmFileAdapter.kt
app/src/main/java/com/qwq/ncmtest/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml  dialog_file_list.xml  list_item_file.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/qwq/ncmmp3/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
